# UPS

./: .gitignore
Client/: build.xml
Client/src/: Canvas.java  Connection.java  Game.java  Main.java  Message.java  ProcessMessage.java  Receiver.java  Window.java
ClientFX/: build.xml
ClientFX/src/: Message.java  Window.fxml  WindowController.java
Server/: CMakeLists.txt  Makefile  server  words.txt
Server/src/: communication.c  communication.h  game.c  game.h  list.c  list.h  main.c  server.c  server.h  structures.h
doc/: Dokumentace.aux  Dokumentace.out  Dokumentace.tex  Dokumentace.toc
